# square-detection-c-opencv-demo

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  squares.cpp
